[package]
name = "ryang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ryang"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ropey = "1.6"
tree-sitter-yang = { git = "https://github.com/trislu/tree-sitter-yang.git", branch = "master" }
intervaltree = "0.2"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "2.0"
anyhow = "1.0"
